--- a/trunk/user/www/Makefile
+++ b/trunk/user/www/Makefile
@@ -200,13 +200,16 @@ ifneq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
 	rm -f $(INSTALLDIR)/www/Shadowsocks_log.asp
 endif
 
-ifeq ($(CONFIG_FIRMWARE_WEBUI_HIDE_VPN),y)
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER),y)
+	rm -f $(INSTALLDIR)/www/vpnsrv.asp
+endif
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT),y)
 	rm -f $(INSTALLDIR)/www/vpn_clients.asp
 	rm -f $(INSTALLDIR)/www/vpncli.asp
-	rm -f $(INSTALLDIR)/www/vpnsrv.asp
 endif
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_ADBYBY),y)
 	rm -f $(INSTALLDIR)/www/Advanced_adbyby.asp
+	rm -f $(INSTALLDIR)/www/Ad_action.asp
 endif
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_ALIDDNS),y)
 	rm -f $(INSTALLDIR)/www/Advanced_aliddns.asp
@@ -216,6 +219,7 @@ ifneq ($(CONFIG_FIRMWARE_INCLUDE_ADGUARDHOME),y)
 endif
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_KOOLPROXY),y)
 	rm -f $(INSTALLDIR)/www/Advanced_koolproxy.asp
+	rm -f $(INSTALLDIR)/www/Kp_action.asp
 endif
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_CADDY),y)
 	rm -f $(INSTALLDIR)/www/Advanced_caddy.asp
@@ -228,6 +232,22 @@ ifneq ($(CONFIG_FIRMWARE_INCLUDE_ZEROTIER),y)
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_FRPC)_$(CONFIG_FIRMWARE_INCLUDE_FRPS), n_n)
 	rm -f $(INSTALLDIR)/www/Advanced_frp.asp
+endif
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_NVPPROXY),y)
+	rm -f $(INSTALLDIR)/www/Advanced_nvpproxy.asp
+endif
+#ifneq ($(CONFIG_FIRMWARE_INCLUDE_NPC),y)
+	rm -f $(INSTALLDIR)/www/Advanced_npc.asp
+	rm -f $(INSTALLDIR)/www/Advanced_npc_log.asp
+#endif
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_DDNSTO),y)
+	rm -f $(INSTALLDIR)/www/Advanced_ddnsto.asp
+endif
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_WIREGUARD),y)
+	rm -f $(INSTALLDIR)/www/Advanced_wireguard.asp
+endif
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_ALDRIVER),y)
+	rm -f $(INSTALLDIR)/www/Advanced_aliyundrive.asp
 endif
 
 clean:
