--- a/trunk/user/www/Makefile
+++ b/trunk/user/www/Makefile
@@ -229,6 +229,15 @@ endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_FRPC)_$(CONFIG_FIRMWARE_INCLUDE_FRPS), n_n)
 	rm -f $(INSTALLDIR)/www/Advanced_frp.asp
 endif
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_DDNSTO),y)
+	rm -f $(INSTALLDIR)/www/Advanced_ddnsto.asp
+endif
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_WIREGUARD),y)
+	rm -f $(INSTALLDIR)/www/Advanced_wireguard.asp
+endif
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_ALDRIVER),y)
+	rm -f $(INSTALLDIR)/www/Advanced_aliyundrive.asp
+endif
 
 clean:
 	@echo "Clean www romfs"
